# seap_subscription_api

./: .env  Cargo.toml  schema.sql  sqlx-data.json  users.sql
migrations/: 20230203192555_users.sql  20230203192601_subscriptions.sql
src/: handlers.rs  lib.rs  models.rs  utils.rs
src/handlers/: create_subscription.rs  create_user.rs  delete_subscription.rs  delete_user.rs  get_subscriptions.rs  get_users.rs  update_subscription.rs  update_user.rs
src/models/: subscription.rs  user.rs
src/models/fixtures/: subscriptions.sql  users.sql
src/models/subscription/: create.rs  delete.rs  get_all_of_email.rs  get_all_paginated.rs  get_one.rs  update.rs
src/models/user/: create.rs  update.rs
