[package]
name = "seap_subscription_api"
version = "0.1.0"
edition = "2021"
publish = false

[lib]

[dependencies]
shuttle-service = { version = "0.8.0", features = ["web-axum"] }
axum = "0.6.1"
sync_wrapper = "0.1.1"
shuttle-shared-db = { version = "0.8.0", features = ["postgres"] }
sqlx = { version = "0.6.2", features = ["postgres", "time"] }
anyhow = "1.0.68"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
time = { version = "0.3.17", features = [
    "serde",
    "serde-human-readable",
    "serde-well-known",
] }
regex = "1.7.0"
axum-macros = "0.3.0"
